--- a/src/app/aspirations/aspirations.component.html
+++ b/src/app/aspirations/aspirations.component.html
@@ -12,28 +12,30 @@
               <svg class="u-svg-content" viewBox="0 0 409.6 409.6" x="0px" y="0px" id="svg-c574"><g><g><path d="M392.533,187.733H17.067C7.641,187.733,0,195.374,0,204.8s7.641,17.067,17.067,17.067h375.467    c9.426,0,17.067-7.641,17.067-17.067S401.959,187.733,392.533,187.733z"></path>
     </g>
     </g></svg>
-            </div>Well first of all.
+             
+
+            </div> Member at Google Student developer club
           </li>
           <li>
             <div class="u-list-icon u-text-palette-2-base">
               <svg class="u-svg-content" viewBox="0 0 409.6 409.6" x="0px" y="0px" id="svg-c574"><g><g><path d="M392.533,187.733H17.067C7.641,187.733,0,195.374,0,204.8s7.641,17.067,17.067,17.067h375.467    c9.426,0,17.067-7.641,17.067-17.067S401.959,187.733,392.533,187.733z"></path>
     </g>
     </g></svg>
-            </div>Well second of all.
+            </div>Member at IEEE CS Chapter & Executive Board member at Project Axis
           </li>
           <li>
             <div class="u-list-icon u-text-palette-2-base">
               <svg class="u-svg-content" viewBox="0 0 409.6 409.6" x="0px" y="0px" id="svg-c574"><g><g><path d="M392.533,187.733H17.067C7.641,187.733,0,195.374,0,204.8s7.641,17.067,17.067,17.067h375.467    c9.426,0,17.067-7.641,17.067-17.067S401.959,187.733,392.533,187.733z"></path>
     </g>
     </g></svg>
-            </div>Well third of all.
+            </div> Member at ACM - INSAT
           </li>
           <li>
             <div class="u-list-icon u-text-palette-2-base">
               <svg class="u-svg-content" viewBox="0 0 409.6 409.6" x="0px" y="0px" id="svg-c574"><g><g><path d="M392.533,187.733H17.067C7.641,187.733,0,195.374,0,204.8s7.641,17.067,17.067,17.067h375.467    c9.426,0,17.067-7.641,17.067-17.067S401.959,187.733,392.533,187.733z"></path>
     </g>
     </g></svg>
-            </div>Well fourth of all.
+            </div> Basketball Player at INSAT Uni Basketball Team 
           </li>
         </ul>
         <div class="u-palette-2-base u-shape u-shape-circle u-shape-1"></div>
