--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
   <div class="u-container-layout u-valign-middle u-container-layout-1">
     <h5 class="u-text u-text-1">About Me</h5>
     <h1 class="u-custom-font u-font-oswald u-text u-text-2">Houssem Saafi</h1>
-    <p id="text" class="u-text u-text-3">I am a second year software engineering student at the National Institute of Applied Science and Technology, Tunis.
+    <p id="text" class="u-text u-text-3">I am a third year software engineering student at the National Institute of Applied Science and Technology, Tunis.
                             <br>
                             being passionate about the newest of technologies, I have always loved the idea of making cool websites and creating my own programs. That was the simple reason why I chose my major 
      </p>
